header with flex finished

--- a/index.html
+++ b/index.html
@@ -16,7 +16,51 @@
   <body>
     <div class="container">
       <header class="header">
-        header here
+        <!-- head-1 -->
+        <img src="img/logo.png" alt="trillo logo" class="logo" />
+        <!-- head-2 -->
+        <form action="#" class="search">
+          <input
+            type="text"
+            class="search__input"
+            placeholder="search hotels"
+          />
+          <!-- svg scalable vector graphics -->
+          <button class="search__button">
+            <svg class="search__icon">
+              <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+            </svg>
+          </button>
+          <!--  -->
+        </form>
+        <!-- head-3 -->
+        <nav class="user-nav">
+          <!--  -->
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+            </svg>
+            <span class="user-nav__notification">7</span>
+          </div>
+          <!--  -->
+          <div class="user-nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-chat"></use>
+            </svg>
+            <span class="user-nav__notification">7</span>
+          </div>
+          <!--  -->
+          <div class="user-nav__user">
+            <img
+              src="img/user.jpg"
+              alt="user photo"
+              class="user-nav__user-photo"
+            />
+            <span class="user-nav__user-name">MLJ</span>
+          </div>
+          <!--  -->
+        </nav>
+        <!--  -->
       </header>
       <div class="content">
         <nav class="sidebar">
