--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <title>trillo &mdash; Your all-in-one booking app</title>
   </head>
   <body>
+    <!--  -->
+    <!--  -->
     <div class="container">
+      <!--  -->
       <header class="header">
         <!-- head-1 -->
         <img src="img/logo.png" alt="trillo logo" class="logo" />
@@ -62,14 +65,72 @@
         </nav>
         <!--  -->
       </header>
+      <!--  -->
       <div class="content">
+        <!--  -->
+        <!--  -->
         <nav class="sidebar">
-          navigation
+          <!--  -->
+          <!--  -->
+          <ul class="side-nav">
+            <!--  -->
+            <li class="side-nav__item side-nav__item--active">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use>
+                </svg>
+                <span>Hotel</span>
+              </a>
+            </li>
+            <!--  -->
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                </svg>
+                <span>Flight</span>
+              </a>
+            </li>
+            <!--  -->
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <span>Car Rental</span>
+              </a>
+            </li>
+            <!--  -->
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-map"></use>
+                </svg>
+                <span>Tours</span>
+              </a>
+            </li>
+            <!--  -->
+          </ul>
+          <!--  -->
+          <!--  -->
+          <div class="legal">
+            &copy; 2019 by someone.
+          </div>
+          <!--  -->
+          <!--  -->
         </nav>
+        <!--  -->
+        <!--  -->
         <main class="hotel-view">
           hotel view
         </main>
+        <!--  -->
+        <!--  -->
       </div>
+      <!--  -->
+      <!--  -->
     </div>
+    <!--  -->
+    <!--  -->
   </body>
 </html>
