building the description

--- a/index.html
+++ b/index.html
@@ -170,6 +170,60 @@
               <div class="overview__rating-count">429 votes</div>
             </div>
           </div>
+          <!--  -->
+          <div class="detail">
+            <div class="description">
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+                illum sunt. Tempore asperiores iusto, officia cumque voluptatem
+                quod magni corrupti fuga quam suscipit dignissimos illo possimus
+                deserunt nihil nostrum eum.
+              </p>
+              <p class="paragraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum,
+                illum suscipit dignissimos illo possimus deserunt nihil nostrum
+                eum.
+              </p>
+              <ul class="list">
+                <li class="list__item">beach</li>
+                <li class="list__item">breakfast</li>
+                <li class="list__item">car</li>
+                <li class="list__item">tv</li>
+                <li class="list__item">wi-fi</li>
+                <li class="list__item">drink</li>
+                <li class="list__item">something</li>
+                <li class="list__item">some else</li>
+              </ul>
+              <div class="recommend">
+                <p class="recommend__count">
+                  lusv and 3 other recomad
+                </p>
+                <div class="recommend__friends">
+                  <img
+                    src="img/user-3.jpg"
+                    alt="friend1"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-4.jpg"
+                    alt="friend2"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-5.jpg"
+                    alt="friend3"
+                    class="recommend__photo"
+                  />
+                  <img
+                    src="img/user-6.jpg"
+                    alt="friend4"
+                    class="recommend__photo"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="user-reviews">reviews</div>
+          </div>
         </main>
         <!--  -->
         <!--  -->
